# medical_data_analysis

./: Makefile  README.md  data_exploration.ipynb  helpers.py  pyproject.toml
data/processed/: cleaned_up_health.pkl.gzip
data/raw/: health_data.csv
figures/: age_density_by_modality.html  age_dist.html  employee_visits_by_modality.html  risk_by_modality.html  visits.html
tests/: test_helpers.py
