[tool.poetry]
name = "medical_data_analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
altair = "^4.0"
jupyter = "^1.0"
pandas = "^0.25.3"
vega_datasets = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
